# quorum

./: Cargo.toml  README.md  config.toml
src/: arith.rs  condition.rs  config.rs  config_parse.rs  fmt.rs  lib.rs  math.rs  parallel_scheduler.rs  parser.rs  simplify.rs  weighted_cost.rs
src/parse/: mod.rs  op.rs  pratt.rs  token.rs
