[package]
name = "quorum"
version = "0.1.0"
edition = "2024"

[dependencies]
egg = { git = "https://github.com/egraphs-good/egg.git" }
indexmap = "2.11.1"
toml = "0.9.5" 
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
smallvec = "1.15.1"
thiserror = "2.0.16"
rayon = "1.11.0"
dashmap = "6.1.0"
unicode-xid = "0.2.6"
