[package]
name = "quorum"
version = "0.1.0"
edition = "2024"

[dependencies]
egg = { git = "https://github.com/egraphs-good/egg.git" }
toml = "0.9.5" 
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
rayon = "1.11.0"
dashmap = "6.1.0"
unicode-xid = "0.2.6"
env_logger = "0.11.8"
crossterm = "0.29.0"
